--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "proshop",
-  "version": "1.0.0",
-  "description": "MERN shopping cart app",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node backend/server",
-    "server": "nodemon backend/server",
-    "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LamaLo/proshop.git"
-  },
-  "author": "eliran",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LamaLo/proshop/issues"
-  },
-  "homepage": "https://github.com/LamaLo/proshop#readme",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12"
-  },
-  "devDependencies": {
-    "concurrently": "^6.0.0",
-    "nodemon": "^2.0.7"
-  }
+	"name": "proshop",
+	"version": "1.0.0",
+	"description": "MERN shopping cart app",
+	"main": "server.js",
+	"type": "module",
+	"scripts": {
+		"start": "node backend/server",
+		"server": "nodemon backend/server",
+		"client": "npm start --prefix frontend",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"data:import": "node backend/seeder",
+		"data:destroy": "node backend/seeder -d"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LamaLo/proshop.git"
+	},
+	"author": "eliran",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/LamaLo/proshop/issues"
+	},
+	"homepage": "https://github.com/LamaLo/proshop#readme",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"colors": "^1.4.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-async-handler": "^1.2.0",
+		"mongoose": "^6.0.12"
+	},
+	"devDependencies": {
+		"concurrently": "^6.0.0",
+		"nodemon": "^2.0.7"
+	}
 }
